--- a/web/static/css/form_create.css
+++ b/web/static/css/form_create.css
@@ -6,5 +6,16 @@
 .table-form {
     width: 100%;
     text-align: center;
+    border-radius: 15px;
     border: 1px solid black;
+}
+
+.table-to-json {
+    margin: 0px 0px 20px 10px;
+}
+
+.output-json {
+    background-color: white;
+    border: 1px solid black;
+    margin: 0px 20%;
 }
